; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_adm_crawler.c_close_handler_copy.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_adm_crawler.c_close_handler_copy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.copying_stream_baton = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*)* @close_handler_copy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @close_handler_copy(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.copying_stream_baton*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.copying_stream_baton*
  store %struct.copying_stream_baton* %5, %struct.copying_stream_baton** %3, align 8
  %6 = load %struct.copying_stream_baton*, %struct.copying_stream_baton** %3, align 8
  %7 = getelementptr inbounds %struct.copying_stream_baton, %struct.copying_stream_baton* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = call i32* @svn_stream_close(i32 %8)
  %10 = call i32 @SVN_ERR(i32* %9)
  %11 = load %struct.copying_stream_baton*, %struct.copying_stream_baton** %3, align 8
  %12 = getelementptr inbounds %struct.copying_stream_baton, %struct.copying_stream_baton* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32* @svn_stream_close(i32 %13)
  ret i32* %14
}

declare dso_local i32 @SVN_ERR(i32*) #1

declare dso_local i32* @svn_stream_close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
